--- a/src/site/asciidoc/release.adoc.vm
+++ b/src/site/asciidoc/release.adoc.vm
@@ -15,6 +15,7 @@ WARNING: Make sure the CI build is green and you have no snapshot dependencies
 == Release the Platform BOM
 Here are the steps to follow if you want to release the platform BOM
 
+ * Before release change the value of the `nemesis.version` property in the `pom.xml` to `$releaseVersion`.
  * The commands for the release are the following
 [source,bash]
 ----
@@ -103,6 +104,9 @@ This will build and deploy the archetype with version $releaseVersion to the nem
 == Release the consoles
 Release the nemesis-consoles project with the above commands.
 
+== Revert the nemesis.version property
+Revert the nemesis.version property to `$nextVersion`, then commit, push and deploy.
+
 == Make sure the CI build is green again.
 Next step is to make sure the link:http://circleci.com/[CircleCI] build is stable again.
 
@@ -114,8 +118,9 @@ Go though each project and generate a changelog for what was changed in this ver
 Simply run the following command in each of the released projects and then push the new changelog:
 [source,bash]
 ----
-github_changelog_generator
+github_changelog_generator -u your_username -t your_github_token
 ----
+The parameter `your_username` is optional and `your_github_token` can be skipped if you have specified `$CHANGELOG_GITHUB_TOKEN` environment variable.
 
 == Update your IDE
 Make sure your IDE has the right `since` attribute. You should bump the version so that every new class that you create will have the correct version on it.
