--- a/src/site/asciidoc/release.adoc.vm
+++ b/src/site/asciidoc/release.adoc.vm
@@ -113,6 +113,9 @@ Next step is to make sure the link:http://circleci.com/[CircleCI] build is stabl
 == Close milestones
 Go through all the github projects and close the milestone that we have just released. If necessary create new milestones for future releases.
 
+== Draft a new release on github
+For every project open the release url and create a new link:https://github.com/nemesis-software/nemesis-bom/releases[Github Release].
+
 == Generate a changelog	
 Go though each project and generate a changelog for what was changed in this version. We use the link:https://skywinder.github.io/github-changelog-generator/[github_changelog_generator] tool for generating the changelog.
 Simply run the following command in each of the released projects and then push the new changelog:
