--- a/src/site/asciidoc/bom.adoc.vm
+++ b/src/site/asciidoc/bom.adoc.vm
@@ -1,12 +1,12 @@
 = Introduction
 Petar Tahchiev <https://github.com/ptahchiev[@ptahchiev]>;
 
-The nemesis platform bom (Bill Of Materials) specifies all the dependencies for the platform. It inherits the link:http://platform.spring.io/platform/[spring platform bom] and includes
+The Nemesis platform bom (Bill Of Materials) specifies all the dependencies for the platform. It inherits the link:http://platform.spring.io/platform/[spring platform bom] and includes
 also the  link:http://repo1.maven.org/maven2/org/drools/drools-bom/[drools maven bom]. On top of that it includes some more third party dependencies, which are not part of the other boms. The version of the dependencies is extracted as a property for easy management, and the dependencies themselves are specified as managed dependencies
 so that the end-user can declare them without version.
 
 == Release cycle
-A new version of the platform bom is released with each new version of the nemesis platform. Thus we make sure that the dependencies are compatible with each other. If you want to know more on how we perform a 
+A new version of the platform bom is released with each new version of the Nemesis Platform. Thus we make sure that the dependencies are compatible with each other. If you want to know more on how we perform a
 release please read our link:release.html[release guide].
 
 == Versioning
@@ -18,7 +18,7 @@ We have constructed a documentation on the things to be aware of when implementi
 == Dependency versions
 For a complete list of dependencies please have a look inside the `pom.xml`. Below you can find the properties that are defined in the BOM:
 
-[cols="<,>"]
+[cols="<,<"]
 |===
 |**Key**|**Value**
 #foreach($prop in $project.properties.propertyNames())
